--- a/package.json
+++ b/package.json
@@ -16,5 +16,18 @@
   "bugs": {
     "url": "https://github.com/novusratoon/projectEuler-react/issues"
   },
-  "homepage": "https://github.com/novusratoon/projectEuler-react#readme"
+  "homepage": "https://github.com/novusratoon/projectEuler-react#readme",
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "html-webpack-plugin": "^2.30.1",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
+  },
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
+  }
 }
